Bug 62012 - Intermittent black geometry
Summary: Intermittent black geometry
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium major
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-08 09:38 UTC by Michel Dänzer
Modified: 2013-03-22 14:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Michel Dänzer 2013-03-08 09:38:56 UTC
Some apps intermittently show black instead of the expected coloration for some parts of the geometry.

Investigating this with the rss-glx hack atunnel, the depth buffer appears to have the correct values for the affected areas. So apparently the pixel shader either doesn't run or fails to produce the correct colour values there for some reason.
Comment 1 Michel Dänzer 2013-03-22 14:11:11 UTC
commit c446baa0be1ed2a3bf157519f89a65d348aad17c
Author: Michel Danzer <michel.daenzer@amd.com>
Date:   Fri Mar 22 14:09:10 2013 +0000

    R600: Use legacy (0 * anything = 0) MUL instructions for pow intrinsics

    Fixes wrong lighting in some corner cases with r600g and radeonsi, e.g.
    manifested by failure of two piglit/glean tests and intermittent black
    patches in many apps.

    Tested on SI and RS880.

    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=62012 [radeonsi]
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=58150 [r600g]

    NOTE: This is a candidate for the Mesa stable branch.

    Reviewed-by: Christian König <christian.koenig@amd.com>

    git-svn-id: https://llvm.org/svn/llvm-project/llvm/trunk@177730 91177308-0d34-0410-b5e6-96231b3b80d8


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.